Remove temporary code

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,24 +25,12 @@ FetchContent_Declare(
         GIT_TAG "605a34765aa5d5ecbf476b4598a862ada971b0cc" # v3.0.1
 )
 
-FetchContent_Declare(
-        cppcoro
-        GIT_REPOSITORY "https://github.com/andreasbuhr/cppcoro"
-        GIT_TAG "1c5f90184a5ceae32fc25f49ed549d952f565e1e" # 22. June 2022
-)
-
-FetchContent_Declare(
-        fmt
-        GIT_REPOSITORY "https://github.com/fmtlib/fmt"
-        GIT_TAG "b6f4ceaed0a0a24ccf575fab6c56dd50ccf6f1a9" # 8.1.1
-)
-
-FetchContent_MakeAvailable(Catch2 cppcoro fmt)
+FetchContent_MakeAvailable(Catch2)
 
 include(Catch)
 
 add_executable(tests tests.cpp)
-target_link_libraries(tests PRIVATE keycap::keycap keycap::project_warnings keycap::project_options Catch2WithMain cppcoro fmt::fmt)
+target_link_libraries(tests PRIVATE keycap::keycap keycap::project_warnings keycap::project_options Catch2WithMain)
 set_target_properties(tests PROPERTIES CXX_EXTENSIONS OFF)
 target_compile_features(tests PUBLIC cxx_std_23)
 
