Rename module keycap to keycap.core

--- a/code/keycap.core/CMakeLists.txt
+++ b/code/keycap.core/CMakeLists.txt
@@ -1,17 +1,17 @@
 
-add_library(keycap_keycap
+add_library(keycap_core
 	"algorithm.ixx"
 	"concepts.ixx"
-	"keycap.ixx"
+	"keycap.core.ixx"
 	"math.ixx"
 	"scopeguard.ixx"
 	"string.ixx"
 )
-add_library(keycap::keycap ALIAS keycap_keycap)
+add_library(keycap::core ALIAS keycap_core)
 
-set_property(TARGET keycap_keycap PROPERTY CMAKE_GENERATOR "msbuild")
+set_property(TARGET keycap_core PROPERTY CMAKE_GENERATOR "msbuild")
 
-target_include_directories(keycap_keycap
+target_include_directories(keycap_core
 	PUBLIC
 		$<INSTALL_INTERFACE:include>
 		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
@@ -19,7 +19,7 @@ target_include_directories(keycap_keycap
 		${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-target_link_libraries(keycap_keycap
+target_link_libraries(keycap_core
 	PRIVATE
 		keycap::project_options
         keycap::project_warnings
